fix(scheme): background colour in dark mode

--- a/MacFolket.css
+++ b/MacFolket.css
@@ -27,3 +27,14 @@ span.column {
 	color: gray;
 	text-align: right;
 }
+
+/* Text and background color for dark mode */
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #fefefe;
+    background-color: #2f2e31;
+    margin-right: 0em;
+    margin-bottom: 0em;
+    padding: 0em;
+  }
+}
